# ECS189G

./: README.md
MATE-KD/: .gitignore  CITATION.bib  LICENSE  MATE-KD.ipynb  PROJECT_STRUCTURE.md  README.md  SETUP.md  cfg.yaml  environment.yml  hyperparameter_search.py  pyproject.toml  requirements.txt  train_aggressive_92plus.py  train_run_b_extended.py
MATE-KD/core/: engine.py  losses.py  similarity.py  student_gradcam.py  weighting.py
MATE-KD/data/: README.md  cifar_loaders.py  download_data.py  fast_cache.py  gradcam_cache_loader.py  heatmap_augmentation.py  indexed_dataset.py  precompute_gradcam_cache.py  run_gradcam_precomputation.py  test_loaders.py
MATE-KD/data/data/gradcam_cache/metadata/: cache_info.json
MATE-KD/explainers/: gradcam.py  gradcam_utils.py
MATE-KD/scripts/: reproduce_results.py
MATE-KD/student/: resnet_20.py  zoo.py
MATE-KD/teachers/: README.md  evaluate_all_teachers.py  monitor_training.py  test_models.py  train_all_sequential.py  train_both_vgg.py  train_densenet121.py  train_resnet110.py  train_resnet56.py  train_vgg16.py  train_vgg19.py  utils.py
phase-one/ECS189G-master/: README.md  data_utils.py  distillation.py  distillation_ig.py  evaluate_cifar.py  evaluation.py  ig_eval.py  model_utils.py  requirements.txt  summary_table.csv  summary_table.tex  table_utils.py
phase-one/ECS189G-master/Checkpoints/: resnet20_student_baseline.pth  resnet56_teacher_best.pth  student_cam.pth  student_cam_opt_b.pth  student_cam_opt_b_200ep.pth  student_cam_opt_c.pth  student_campp.pth  student_campp_fast.pth  student_ig.pth  (+2 more)
(+3 files in other folders)
