[project]
name = "resnet56-cifar10"
version = "0.1.0"
description = "ResNet-56 training on CIFAR-10 dataset"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.64.0",
    "tensorboard>=2.10.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
] 